--- a/assets/default/less/landing-page.less
+++ b/assets/default/less/landing-page.less
@@ -56,3 +56,13 @@
   }
 }
 
+@media screen and (max-width: 860px) {
+    #landing_page {
+        #new_ticket, #check_status {
+            width: 100%;
+            float: none;
+            margin-bottom: 20px;
+            box-sizing: border-box;
+        }
+    }
+}
